--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href class="logo">Web<span class="logo-part">Studio</span></a>
             <ul>
                 <li><a href="">Cтудия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -88,7 +88,7 @@
     </section>
 
     <footer>
-        <a href="">WebStudio</a>
+        <a href class="logo">Web<span class="logo-parttwo">Studio</span></a>
         <address>
             </ul>
                 <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
