--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
+    <header class="page-header">
         <nav>
-            <a href class="logo">Web<span class="logo-part">Studio</span></a>
-            <ul>
-                <li><a href="">Cтудия</a></li>
-                <li><a href="portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="" class="logo">Web<span class="logo-part">Studio</span></a>
+            <ul class="nav-list">
+                <li><a href="" class="link">Cтудия</a></li>
+                <li><a href="portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         </ul>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="link2">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </ul>
     </header>
 
