--- a/index.html
+++ b/index.html
@@ -12,93 +12,94 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+<body class="body1">
 
-<body>
     <header class="page-header">
         <nav>
-            <a href="" class="logo">Web<span class="logo-part">Studio</span></a>
-            <ul class="nav-list">
-                <li><a href="" class="link">Cтудия</a></li>
-                <li><a href="portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
+            <ul class="page-header-links">
+                <li><a href="">Cтудия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        </ul>
+        
+        </ul class="page-header-contacts">
             <a href="mailto:info@devstudio.com" class="link2">info@devstudio.com</a>
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </ul>
     </header>
 
     <div>
-        <section>
-            <h1>Эффективные решения <br /> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="advantage">
+            <h1 class="advantage-logo">Эффективные решения <br /> для вашего бизнеса</h1>
+            <button class="advantage-button" type="button">Заказать услугу</button>
         </section>
     </div>
 
-    <section>
-        <ul>
+    <section class="advantages"> 
+        <ul class="advantages-list">
             <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также <br /> начало повседневной работы по <br /> формированию позиции.</p>
+                <h3 class="advantages-list-1">Внимание к деталям</h3>
+                <p class="advantages-list-1-txt">Идейные соображения, а также <br /> начало повседневной работы по <br /> формированию позиции.</p>
             </li>
             <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности <br /> же рамки и место обучения кадров <br /> влечет за собой.</p>
+                <h3 class="advantages-list-1">Пунктуальность</h3>
+                <p class="advantages-list-1-txt">Задача организации, в особенности <br /> же рамки и место обучения кадров <br /> влечет за собой.</p>
             </li>
             <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с <br /> широким активом в значительной <br /> степени обуславливает.</p>
+                <h3 class="advantages-list-1">Планирование</h3>
+                <p class="advantages-list-1-txt">Равным образом консультация с <br /> широким активом в значительной <br /> степени обуславливает.</p>
             </li>
             <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько <br /> очевидна, что реализация плановых <br /> заданий.</p>
-            </li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="./images/box-1.jpg" alt="Печатает код" width="370"></li>
-            <li><img src="./images/box2.jpg" alt="Адаптирование под телефон" width="370"></li>
-            <li><img src="./images/box3.jpg" alt="Адаптирование под планшет" width="370"></li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/box4.jpg" alt="Product Designer" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/box5.jpg" alt="Frontend Developer" width="270">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/box6.jpg" alt="Marketing" width="270">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/box7.jpg" alt="UI Designer" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <h3 class="advantages-list-1">Современные технологии</h3>
+                <p class="advantages-list-1-txt">Значимость этих проблем настолько <br /> очевидна, что реализация плановых <br /> заданий.</p>
             </li>
         </ul>
     </section>
 
-    <footer>
-        <a href class="logo">Web<span class="logo-parttwo">Studio</span></a>
+    <section class="about">
+        <h2 class="about-1">Чем мы занимаемся</h2>
+        <ul class="about-items">
+            <li><img src="./images/box-1.jpg" alt="Печатает код" width="370" height="294"></li>
+            <li><img src="./images/box2.jpg" alt="Адаптирование под телефон" width="370" height="294"></li>
+            <li><img src="./images/box3.jpg" alt="Адаптирование под планшет" width="370" height="294"></li>
+        </ul>
+    </section>
+
+    <section class="our-team">
+        <h2 class="our-team-logo">Наша команда</h2>
+        <ul>
+            <li class="our-team-member">
+                <img src="./images/box4.jpg" alt="Product Designer" width="270" height="260">
+                <h3 class="our-team-name">Игорь Демьяненко</h3>
+                <p lang="en" class="our-team-work">Product Designer</p>
+            </li>
+            <li class="our-team-member">
+                <img src="./images/box5.jpg" alt="Frontend Developer" width="270" height="260">
+                <h3 class="our-team-name">Ольга Репина</h3>
+                <p lang="en" class="our-team-work">Frontend Developer</p>
+            </li>
+            <li class="our-team-member">
+                <img src="./images/box6.jpg" alt="Marketing" width="270" height="260">
+                <h3 class="our-team-name">Николай Тарасов</h3>
+                <p lang="en" class="our-team-work">Marketing</p>
+            </li>
+            <li class="our-team-member">
+                <img src="./images/box7.jpg" alt="UI Designer" width="270" height="260">
+                <h3 class="our-team-name">Михаил Ермаков</h3>
+                <p lang="en" class="our-team-work">UI Designer</p>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="foot">
+        <a href="./index.html" class="foot-logo-1">Web<span class="foot-logo-2">Studio</span></a>
         <address>
-            </ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul class="foot-address">
+                <li><a href="" class="foot-address-1">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com" class="foot-address-2">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="foot-address-2">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
