--- a/portfolio.html
+++ b/portfolio.html
@@ -11,87 +11,88 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <header>
+<body class="body1">
+
+    <header class="page-header">
         <nav>
-            <a href="" class="logo">Web<span class="logo-part">Studio</span></a>
-            <ul>
-                <li><a href="index.html" class="link">Cтудия</a></li>
-                <li><a href="" class="link1">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
+            <ul class="page-header-links">
+                <li><a href="./index.html">Cтудия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        </ul>
+
+        </ul class="page-header-contacts">
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
         </ul>
     </header>
 
-    <section>
-        <button>Все</button>
-        <button>Веб-сайты</button>
-        <button>Приложения</button>
-        <button>Дизайн</button>
-        <button>Маркетинг</button>
-    </section>
-
-    <section>
+    <section class="portfolio">
+        <ul>
+            <button type="button" class="portfolio-button">Все</button>
+            <button type="button" class="portfolio-button">Веб-сайты</button>
+            <button type="button" class="portfolio-button">Приложения</button>
+            <button type="button" class="portfolio-button">Дизайн</button>
+            <button type="button" class="portfolio-button">Маркетинг</button>
+        </ul>
         <ul>
             <li>
-                <img src="./images/box8.jpg" alt="Технокряк" width="370">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <img src="./images/box8.jpg" alt="Технокряк" width="370" height="294">
+                <h3 class="portfolio-name">Технокряк</h3>
+                <p class="portfolio-txt">Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/box9.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <img src="./images/box9.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
+                <p class="portfolio-txt">Дизайн</p>
             </li>
             <li>
-                <img src="./images/box10.jpg" alt="Ресторан Seafood" width="370">
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
+                <img src="./images/box10.jpg" alt="Ресторан Seafood" width="370" height="294">
+                <h3 class="portfolio-name">Ресторан Seafood</h3>
+                <p class="portfolio-txt">Приложение</p>
             </li>
             <li>
-                <img src="./images/box11.jpg" alt="Проект Prime" width="370">
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
+                <img src="./images/box11.jpg" alt="Проект Prime" width="370" height="294">
+                <h3 class="portfolio-name">Проект Prime</h3>
+                <p class="portfolio-txt">Маркетинг</p>
             </li>
             <li>
-                <img src="./images/box12.jpg" alt="Проект Boxes" width="370">
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
+                <img src="./images/box12.jpg" alt="Проект Boxes" width="370" height="294">
+                <h3 class="portfolio-name">Проект Boxes</h3>
+                <p class="portfolio-txt">Приложение</p>
             </li>
             <li>
-                <img src="./images/box13.jpg" alt="Inspiration has no Borders" width="370">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <img src="./images/box13.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                <h3 class="portfolio-name">Inspiration has no Borders</h3>
+                <p class="portfolio-txt">Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/box14.jpg" alt="Издание Limited Edition" width="370">
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
+                <img src="./images/box14.jpg" alt="Издание Limited Edition" width="370" height="294">
+                <h3 class="portfolio-name">Издание Limited Edition</h3>
+                <p class="portfolio-txt">Дизайн</p>
             </li>
             <li>
-                <img src="./images/box15.jpg" alt="Проект LAB" width="370">
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
+                <img src="./images/box15.jpg" alt="Проект LAB" width="370" height="294">
+                <h3 class="portfolio-name">Проект LAB</h3>
+                <p class="portfolio-txt">Маркетинг</p>
             </li>
             <li>
-                <img src="./images/box16.jpg" alt="Growing Business" width="370">
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
+                <img src="./images/box16.jpg" alt="Growing Business" width="370" height="294">
+                <h3 class="portfolio-name">Growing Business</h3>
+                <p class="portfolio-txt">Приложение</p>
             </li>
         </ul>
     </section>
 
-    <footer>
-        <a href class="logo">Web<span class="logo-parttwo">Studio</span></a>
+    <footer class="foot">
+        <a href="./index.html" class="foot-logo-1">Web<span class="foot-logo-2">Studio</span></a>
         <address>
-            </ul>
-            <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul class="foot-address">
+            <li><a href="" class="foot-address-1">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@example.com" class="foot-address-2">info@example.com</a></li>
+            <li><a href="tel:+380991111111" class="foot-address-2">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
