--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        
-        </ul class="page-header-contacts">
-            <a href="mailto:info@devstudio.com" class="link2">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+
+        <ul class="page-header-contacts">
+            <li class="ph-contact"><a href="mailto:info@devstudio.com" class="link1">info@devstudio.com</a></li>
+            <li class="ph-contact"><a href="tel:+380961111111" class="link1">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -40,26 +40,26 @@
     <section class="advantages"> 
         <ul class="advantages-list">
             <li>
-                <h3 class="advantages-list-1">Внимание к деталям</h3>
-                <p class="advantages-list-1-txt">Идейные соображения, а также <br /> начало повседневной работы по <br /> формированию позиции.</p>
+                <h3 class="advantages-list-name">Внимание к деталям</h3>
+                <p class="advantages-list-txt">Идейные соображения, а также <br /> начало повседневной работы по <br /> формированию позиции.</p>
             </li>
             <li>
-                <h3 class="advantages-list-1">Пунктуальность</h3>
-                <p class="advantages-list-1-txt">Задача организации, в особенности <br /> же рамки и место обучения кадров <br /> влечет за собой.</p>
+                <h3 class="advantages-list-name">Пунктуальность</h3>
+                <p class="advantages-list-txt">Задача организации, в особенности <br /> же рамки и место обучения кадров <br /> влечет за собой.</p>
             </li>
             <li>
-                <h3 class="advantages-list-1">Планирование</h3>
-                <p class="advantages-list-1-txt">Равным образом консультация с <br /> широким активом в значительной <br /> степени обуславливает.</p>
+                <h3 class="advantages-list-name">Планирование</h3>
+                <p class="advantages-list-txt">Равным образом консультация с <br /> широким активом в значительной <br /> степени обуславливает.</p>
             </li>
             <li>
-                <h3 class="advantages-list-1">Современные технологии</h3>
-                <p class="advantages-list-1-txt">Значимость этих проблем настолько <br /> очевидна, что реализация плановых <br /> заданий.</p>
+                <h3 class="advantages-list-name">Современные технологии</h3>
+                <p class="advantages-list-txt">Значимость этих проблем настолько <br /> очевидна, что реализация плановых <br /> заданий.</p>
             </li>
         </ul>
     </section>
 
     <section class="about">
-        <h2 class="about-1">Чем мы занимаемся</h2>
+        <h2 class="about-logo">Чем мы занимаемся</h2>
         <ul class="about-items">
             <li><img src="./images/box-1.jpg" alt="Печатает код" width="370" height="294"></li>
             <li><img src="./images/box2.jpg" alt="Адаптирование под телефон" width="370" height="294"></li>
@@ -94,12 +94,12 @@
     </section>
 
     <footer class="foot">
-        <a href="./index.html" class="foot-logo-1">Web<span class="foot-logo-2">Studio</span></a>
+        <a href="./index.html" class="foot-logo-part-one">Web<span class="foot-logo-part-two">Studio</span></a>
         <address>
             </ul class="foot-address">
-                <li><a href="" class="foot-address-1">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="foot-address-2">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="foot-address-2">+38 099 111 11 11</a></li>
+                <li class="foot-list"><a href="" class="foot-address-location">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="foot-list"><a href="mailto:info@example.com" class="foot-contact">info@example.com</a></li>
+                <li class="foot-list"><a href="tel:+380991111111" class="foot-contact">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
