--- a/portfolio.html
+++ b/portfolio.html
@@ -24,75 +24,77 @@
         </nav>
 
         </ul class="page-header-contacts">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="ph-contact"><a href="mailto:info@devstudio.com" class="link1">info@devstudio.com</a></li>
+            <li class="ph-contact"><a href="tel:+380961111111" class="link1">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
-    <section class="portfolio">
-        <ul>
-            <button type="button" class="portfolio-button">Все</button>
-            <button type="button" class="portfolio-button">Веб-сайты</button>
-            <button type="button" class="portfolio-button">Приложения</button>
-            <button type="button" class="portfolio-button">Дизайн</button>
-            <button type="button" class="portfolio-button">Маркетинг</button>
-        </ul>
-        <ul>
-            <li>
-                <img src="./images/box8.jpg" alt="Технокряк" width="370" height="294">
-                <h3 class="portfolio-name">Технокряк</h3>
-                <p class="portfolio-txt">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/box9.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
-                <p class="portfolio-txt">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/box10.jpg" alt="Ресторан Seafood" width="370" height="294">
-                <h3 class="portfolio-name">Ресторан Seafood</h3>
-                <p class="portfolio-txt">Приложение</p>
-            </li>
-            <li>
-                <img src="./images/box11.jpg" alt="Проект Prime" width="370" height="294">
-                <h3 class="portfolio-name">Проект Prime</h3>
-                <p class="portfolio-txt">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/box12.jpg" alt="Проект Boxes" width="370" height="294">
-                <h3 class="portfolio-name">Проект Boxes</h3>
-                <p class="portfolio-txt">Приложение</p>
-            </li>
-            <li>
-                <img src="./images/box13.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                <h3 class="portfolio-name">Inspiration has no Borders</h3>
-                <p class="portfolio-txt">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/box14.jpg" alt="Издание Limited Edition" width="370" height="294">
-                <h3 class="portfolio-name">Издание Limited Edition</h3>
-                <p class="portfolio-txt">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/box15.jpg" alt="Проект LAB" width="370" height="294">
-                <h3 class="portfolio-name">Проект LAB</h3>
-                <p class="portfolio-txt">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/box16.jpg" alt="Growing Business" width="370" height="294">
-                <h3 class="portfolio-name">Growing Business</h3>
-                <p class="portfolio-txt">Приложение</p>
-            </li>
-        </ul>
-    </section>
+    <main>
+        <section class="portfolio">
+            <ul>
+                <li class="pb"><button type="button" class="portfolio-button">Все</button></li>
+                <li class="pb"><button type="button" class="portfolio-button">Веб-сайты</button></li>
+                <li class="pb"><button type="button" class="portfolio-button">Приложения</button></li>
+                <li class="pb"><button type="button" class="portfolio-button">Дизайн</button></li>
+                <li class="pb"><button type="button" class="portfolio-button">Маркетинг</button></li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="./images/box8.jpg" alt="Технокряк" width="370" height="294">
+                    <h2 class="portfolio-name">Технокряк</h2>
+                    <p class="portfolio-txt">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/box9.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-txt">Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/box10.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <h2 class="portfolio-name">Ресторан Seafood</h2>
+                    <p class="portfolio-txt">Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/box11.jpg" alt="Проект Prime" width="370" height="294">
+                    <h2 class="portfolio-name">Проект Prime</h2>
+                    <p class="portfolio-txt">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/box12.jpg" alt="Проект Boxes" width="370" height="294">
+                    <h2 class="portfolio-name">Проект Boxes</h2>
+                    <p class="portfolio-txt">Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/box13.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <h2 class="portfolio-name">Inspiration has no Borders</h2>
+                    <p class="portfolio-txt">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/box14.jpg" alt="Издание Limited Edition" width="370" height="294">
+                    <h2 class="portfolio-name">Издание Limited Edition</h2>
+                    <p class="portfolio-txt">Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/box15.jpg" alt="Проект LAB" width="370" height="294">
+                    <h2 class="portfolio-name">Проект LAB</h2>
+                    <p class="portfolio-txt">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/box16.jpg" alt="Growing Business" width="370" height="294">
+                    <h2 class="portfolio-name">Growing Business</h2>
+                    <p class="portfolio-txt">Приложение</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 
     <footer class="foot">
-        <a href="./index.html" class="foot-logo-1">Web<span class="foot-logo-2">Studio</span></a>
+        <a href="./index.html" class="foot-logo-part-one">Web<span class="foot-logo-part-two">Studio</span></a>
         <address>
             </ul class="foot-address">
-            <li><a href="" class="foot-address-1">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@example.com" class="foot-address-2">info@example.com</a></li>
-            <li><a href="tel:+380991111111" class="foot-address-2">+38 099 111 11 11</a></li>
+            <li class="foot-list"><a href="" class="foot-address-location">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="foot-list"><a href="mailto:info@example.com" class="foot-contact">info@example.com</a></li>
+            <li class="foot-list"><a href="tel:+380991111111" class="foot-contact">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
